# django-allianceutils

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .python-version  .venv  CHANGELOG-legacy.md  CHANGELOG.md  LICENSE  README.md  build.py  filters.py  manage.py  migrations.py  models.py  permissions.py  pyproject.toml  requirements-common.txt  requirements-optional.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  urls.py  webpack.py
.github/workflows/: django.yml
allianceutils/: 0001_initial.py  __init__.py  apps.py  checks.py  decorators.py  middleware.py  migrations.py  models.py  permissions.py  rules.py  storage.py  util.py  webpack.py
allianceutils/api/: mixins.py  parsers.py  permissions.py  renderers.py
allianceutils/asynctask/: README.md  __init__.py  backends.py  models.py  task.py
allianceutils/asynctask/migrations/: 0001_initial.py
allianceutils/auth/: backends.py  models.py
allianceutils/management/commands/: autodumpdata.py  base.py  document_reverse_accessors.py  mysqlquickdump.py  mysqlquickload.py  run_scheduled_jobs.py
allianceutils/middleware/: __init__.py  current_user.py  http_auth.py  query_count.py
allianceutils/serializers/: json_ordered.py  json_orminheritancefix.py
allianceutils/serializers/json_orminheritancefix/: __init__.py  json_orminheritancefix18.py  json_orminheritancefix19.py
allianceutils/templatetags/: alliance_bundle.py  alliance_webpack.py  default_value.py  script_json.py
allianceutils/tests/: settings.py  test_util.py  urls.py
allianceutils/tests/autodumpdata/: models.py  tests.py
allianceutils/tests/checks/: tests.py
allianceutils/tests/checks_slash_urls/: urls.py
allianceutils/tests/middleware/: tests.py  urls.py  views.py
allianceutils/tests/profile_auth/: models.py  tests.py  urls.py  views.py
allianceutils/tests/serializers/: models.py  tests.py
allianceutils/tests/util/: tests.py
allianceutils/util/: __init__.py  autodump.py  camel_case.py  date.py  get_firstparty_apps.py
allianceutils/views/: export_permissions.py  views.py
api/: permissions.py
git-hooks/: common.inc  pre-commit
management/commands/: autodumpdata.py  mysqlquickdump.py
src/: manage.py
src/allianceutils/: __init__.py  apps.py  checks.py  decorators.py  filters.py  migrations.py  models.py  permission.py  rules.py  template.py  webpack.py
src/allianceutils/api/: mixins.py  parsers.py
src/allianceutils/auth/: backends.py  models.py  permission.py
src/allianceutils/management/commands/: base.py  document_reverse_accessors.py  print_logging.py
src/allianceutils/middleware/: __init__.py  current_request.py  current_user.py  http_auth.py  query_count.py
src/allianceutils/serializers/: json_ordered.py
src/allianceutils/templatetags/: alliance_webpack.py  common.py
src/allianceutils/tests/: util.py
src/allianceutils/util/: __init__.py  camel_case.py  get_firstparty_apps.py  strtobool.py
src/allianceutils/views/: decorators.py
src/test_allianceutils/: settings.py
src/test_allianceutils/auth/: backends.py
src/test_allianceutils/migrations/: 0001_case_insensitive.py  001-test.sql
src/test_allianceutils/static/webpack_dist/: combined.HASH.bundle.js  jsonly.HASH.bundle.js
src/test_allianceutils/tests/: test_checks_admins.py  test_checks_slash_urls.py  test_commands.py  test_decorators.py  test_migrations.py  test_model_validationerror.py  test_optin_field_mixin.py  test_parsers.py  test_permissions.py  test_template_utils.py  test_util.py  test_webpack.py  webpack-stats-dev.json  webpack-stats-multiple-prod.json
src/test_allianceutils/tests/checks_slash_urls/: views.py  views_drf.py
src/test_allianceutils/tests/document_reverse_accessors/: tests.py
src/test_allianceutils/tests/isort_default_app_config/: models.py
src/test_allianceutils/tests/middleware/: tests.py  urls.py  views.py
src/test_allianceutils/tests/profile_auth/: backends.py  models.py  tests.py  urls.py  views.py
src/test_allianceutils/tests/serializers/: models.py
src/test_allianceutils/tests/viewset_permissions/: tests.py
templatetags/: alliance_bundle.py
test_allianceutils/: settings.py  urls.py
test_allianceutils/static/webpack_dist/: cssonly.HASH.bundle.css
test_allianceutils/tests/: test_checks_autodump.py  test_checks_db_constraints.py  test_checks_explicit_table_names.py  test_checks_field_names.py  test_checks_slash_urls.py  test_commands.py  test_decorators.py  test_model_validationerror.py  test_optin_field_mixin.py  test_parsers.py  test_permissions.py  test_renderers.py  test_templatetags.py  test_util.py  test_webpack.py  webpack-stats-dev.json  webpack-stats-prod.json
test_allianceutils/tests/autodumpdata/: models.py  tests.py
test_allianceutils/tests/autodumpdata/migrations/: 0001_initial.py
test_allianceutils/tests/checks/: tests.py
test_allianceutils/tests/checks_db_constraints/: models.py
test_allianceutils/tests/checks_explicit_table_names/: models.py
test_allianceutils/tests/checks_field_names/: models.py
test_allianceutils/tests/checks_slash_urls/: models.py  urls.py  views.py
test_allianceutils/tests/document_reverse_accessors/: models.py  tests.py
test_allianceutils/tests/document_reverse_accessors/migrations/: 0001_initial.py
test_allianceutils/tests/isort_force_thirdparty/: models.py
test_allianceutils/tests/middleware/: tests.py  urls.py  views.py
test_allianceutils/tests/object_cache/: models.py  tests.py  urls.py  views.py
test_allianceutils/tests/object_cache/migrations/: 0001_initial.py
test_allianceutils/tests/profile_auth/: models.py  tests.py  urls.py  views.py
test_allianceutils/tests/profile_auth/migrations/: 0001_initial.py  0002_auto_20190929_2207.py  0003_auto_20191016_2308.py
test_allianceutils/tests/serializers/: models.py  tests.py
test_allianceutils/tests/serializers/migrations/: 0001_initial.py
test_allianceutils/tests/viewset_permissions/: models.py  tests.py  urls.py  views.py
test_allianceutils/tests/viewset_permissions/migrations/: 0001_initial.py
views/: decorators.py  views.py
(+5 files in other folders)
