[tool.poetry]
name = "django-allianceutils"
version = "2.2.0"
description = "Alliance Software common utilities for Django"
repository = "https://github.com/AllianceSoftware/django-allianceutils/"
homepage = "https://github.com/AllianceSoftware/django-allianceutils/"
documentation = "https://github.com/AllianceSoftware/django-allianceutils/blob/master/README.md"
authors = ["Alliance Software <support@alliancesoftware.com.au>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [
    { include = "allianceutils" },
]
include = [
    "CHANGELOG.md",
]
keywords = [
    "django",
    'alliance',
    'alliancesoftware',
]

[tool.poetry.urls]
issues = "https://github.com/AllianceSoftware/django-allianceutils/issues"

[tool.poetry.dependencies]
python = ">=3.6"

# the only hard dependency is django; everything else is only required
# if you use functions/classes that require them
Django = ">=2.2"
isort = ">=4"

[tool.poetry.dev-dependencies]
tox = "*"
tox-factor = "*"
isort = ">=5"
Django = "^2.2"

# requirements-optional.ini contains extras


[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
force_single_line = true
force_sort_within_sections = true
line_length = 110
order_by_type = false
skip_glob = [
	"*/.tox/*",
	"*/node_modules/*.py",
	"*/migrations/0*.py",
	"*/settings/*.py",
]
# stdlib that may be backported or not always there
extra_standard_library=[
	"pkg_resources",
	"setuptools",
	"typing",
]

# packages that we may have made local modifications too or are checked out from github
# IsortTestCase has expectations about what is set here:
known_third_party=["test_allianceutils.tests.isort_force_thirdparty"]
#known_first_party=["allianceutils"]
